--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 #editorframe{
   width: 100%;
   outline: 0;
-  border: 1px solid #e6e6e6;
+  border: 0;
   cursor: pointer;
   min-height: 500px;
 }
