--- a/index.css
+++ b/index.css
@@ -1,11 +1,14 @@
-#editorframe{
-  width: 100%;
-  outline: 0;
-  border: 0;
-  cursor: pointer;
-  min-height: 500px;
+body{
+  margin: 0;
 }
-.fullimages{
-  width: 100% !important;
-  display: block !important;
+#editorframe{
+  border: 1px solid #e6e6e6;
+  outline: 0;
+  width: 100vw;
+  box-sizing: border-box;
+  height: 80vh;
+}
+.image{
+  display: block;
+  width: 100%;
 }
