--- a/index.css
+++ b/index.css
@@ -6,12 +6,12 @@ h1, h2, h3, h4, h5, h6{
   margin: 0;
 }
 #editorframe{
-  border: 1px solid #e6e6e6;
+  /* border: 0px; */
+  border: 1px solid #868686;
   outline: 0;
   width: 100vw;
   box-sizing: border-box;
-  height: 80vh;
-  
+  height: 99vh;
 }
 .image{
   display: block;
